EntityとDTOの分離